# ConwayBets

./: Dockerfile  README.md  compose.yml  run.bash
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/public/js/: dynamic-iframe-shim.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: WalletConnector.tsx
frontend/src/hooks/: useMarketUpdates.ts
frontend/src/lib/: dynamic-signer.ts  linera-adapter.ts  linera-client.ts  utils.ts  wallet-connector.tsx
frontend/src/lib/hooks/: useMarkets.ts
linera/: Cargo.toml
linera/src/: contract.rs  lib.rs  service.rs  state.rs
scripts/: run_benchmark.sh
tests/: Cargo.toml  integration_test.rs
tests/benches/: performance.rs  utils.rs
tests/benchmarks/: config.toml
tests/src/: lib.rs
