[package]
name = "linera"
version = "0.1.0"
edition = "2024"

[dependencies]
linera-sdk = { version = "0.15.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = "7.0.2"
bcs = "0.1.6"

[dev-dependencies]
# ADDED features = ["test"] here for tests
linera-sdk = { version = "0.15.6", features = ["test"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "linera_contract"
path = "src/contract.rs"

[[bin]]
name = "linera_service"
path = "src/service.rs"