[package]
name = "tests"
version = "0.1.0"
edition = "2024"
description = "Real-time prediction markets on Linera Conway testnet"
license = "Apache-2.0"
authors = ["Gaurav Karakoti karakotigaurav12@gmail.com"]

[dependencies]
linera-sdk = { version = "0.15.6", features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.68"
thiserror = "1.0.44"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
bincode = "1.3.3"
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = "1.0.75"

[dev-dependencies]
linera-sdk = { version = "0.15.6", features = ["test"] }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
assert_matches = "1.5"

[[bench]]
name = "performance"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
test = []
bench = []

[workspace]
members = ["."]